<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Copernicus Explorer</string>

    <!-- welcome screen -->
    <string name="welcomeHeader">Wybierz ścieżkę</string>
    <string name="welcomeWaterPathName">Woda</string>
    <string name="welcomeFirePathName">Ogień</string>
    <string name="welcomeEarthPathName">Ziemia</string>
    <string name="welcomeAirPathName">Powietrze</string>
    
    <string name="water_path_description">Co kojarzy Ci się z wodą? Fale? Para wodna? Ciecz? Tama? Ścieżka Wody poprowadzi Cię przez Centrum Nauki Kopernik idąc tropem eksponatów nawiązujących do tych pojęć.</string>
    <string name="fire_path_description">Co kojarzy Ci się z ogniem? Płomień? Światło? Ciepło? Energia? Ścieżka Ognia poprowadzi Cię przez Centrum Nauki Kopernik idąc tropem eksponatów nawiązujących do tych pojęć.</string>
    <string name="earth_path_description">Co kojarzy Ci się z ziemią? Grawitacja? Wykopaliska? Trzęsienie ziemi? Ścieżka Ziemi poprowadzi Cię przez Centrum Nauki Kopernik idąc tropem eksponatów nawiązujących do tych pojęć. </string>
    <string name="air_path_description">Co kojarzy Ci się z powietrzem? Wiatr? Przestrzeń? Tornado?  Ścieżka Powietrza poprowadzi Cię przez Centrum Nauki Kopernik idąc tropem eksponatów nawiązujących do tych pojęć. </string>

    <!-- path info -->
    <string name="pathInfoHeader">Opis wybranej ścieżki</string>
    <string name="pathInfoDescription">Koralowce czteropromienne, rugozy (Rugosa) – grupa paleozoicznych koralowców kolonijnych (kolonie masywne lub gałązkowe) albo osobniczych. Osobnicze mają kształt rogu lub cylindryczny. We wczesnym stadium rozwojowym powstają trzy pary septów. Pierwsza para to septum główne. Kolejno tworzą się następne dwie pary. Trzy pary septów dzielą kielich koralowca na sześć komór. Jednak dalsze septa tworzą się tylko w czterech komorach. Dlatego nazywa się je koralowcami czteropromiennymi.
Rugozy znane są od ordowiku do późnego permu. Swój rozkwit osiągnęły w dewonie i wczesnym karbonie. Miały duże znaczenie skałotwórcze, stanowią ważny składnik dewońskich i karbońskich wapieni rafowych.</string>
    <string name="pathInfoStartButton">Zaczynam</string>

    <!-- exhibit info -->
    <string name="exhibitName">Super eksponat</string>
    <string name="exhibitGalleryName">galeria Świat w Ruchu</string>
    <string name="exhibitDescription">Koralowce czteropromienne, rugozy (Rugosa) – grupa paleozoicznych koralowców kolonijnych (kolonie masywne lub gałązkowe) albo osobniczych. Osobnicze mają kształt rogu lub cylindryczny. We wczesnym stadium rozwojowym powstają trzy pary septów. Pierwsza para to septum główne. Kolejno tworzą się następne dwie pary. Trzy pary septów dzielą kielich koralowca na sześć komór. Jednak dalsze septa tworzą się tylko w czterech komorach. Dlatego nazywa się je koralowcami czteropromiennymi.
Rugozy znane są od ordowiku do późnego permu. Swój rozkwit osiągnęły w dewonie i wczesnym karbonie. Miały duże znaczenie skałotwórcze, stanowią ważny składnik dewońskich i karbońskich wapieni rafowych.</string>
    <string name="exhibitDetailsBtn">Przejdź do szczegółów</string>
    <string name="exhibitQuestion">Kiedy pojawia się pierwszy przebiśnieg?</string>
    <string name="exhibitAnswer">1. marca</string>
	<string name="ok_button_label">OK</string>
    
    
    <!-- path begin -->
    <string name="pathBeginInfo">Wejdź po schodach na górę, na pierwszym piętrze skręć w lewo i podejdź do wielkiej czerwonej piłki.</string>

    <!-- path summary -->
    <string name="pathSummaryInfo">Koniec ścieżki.</string>
	<string name="pathSummarySummary">Podsumowanie.</string>
    
	<!-- fb  -->

    <string name="update_status">Uaktualnij status na Facebooku</string>
    <string name="shareButton">Pokaż znajomym przebytą ścieżkę.</string>	
</resources>