<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/name"
            style="@style/ExhibitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/exhibitName" />

        <TextView
            android:id="@+id/galleryName"
            style="@style/ExhibitGalleryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/exhibitGalleryName" />

        <ImageView
            android:id="@+id/exhibitonImg"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/name"
            android:src="@drawable/exhibit_example" />

        <TextView
            android:id="@+id/description"
            style="@style/ExhibitDescription"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/exhibitonImg"
            android:padding="10dp"
            android:text="@string/exhibitDescription" />

        <Button
            android:id="@+id/exhibitDetailsBtn"
            style="@style/ExhibitDetailsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_toRightOf="@+id/exhibitonImg"
            android:layout_marginLeft="10dp"
            android:text="@string/exhibitDetailsBtn"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/question"
            style="@style/ExhibitQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exhibitonImg"
            android:padding="10dp"
            android:text="@string/exhibitQuestion" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:id="@+id/answers"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/checkAnswer"
                style="@style/ExhibitQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:drawableLeft="@android:drawable/btn_radio"
                android:drawablePadding="20dp"
                android:text="Omiń pytanie."
                android:textOff=""
                android:textOn="" />

            <RadioButton
                android:id="@+id/checkAnswer1"
                style="@style/ExhibitQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:drawableLeft="@android:drawable/btn_radio"
                android:drawablePadding="20dp"
                android:text="@string/exhibitAnswer"
                android:textOff=""
                android:textOn="" />

            <RadioButton
                android:id="@+id/checkAnswer2"
                style="@style/ExhibitQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:drawableLeft="@android:drawable/btn_radio"
                android:drawablePadding="20dp"
                android:text="@string/exhibitAnswer"
                android:textOff=""
                android:textOn="" />

            <RadioButton
                android:id="@+id/checkAnswer3"
                style="@style/ExhibitQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:drawableLeft="@android:drawable/btn_radio"
                android:drawablePadding="20dp"
                android:text="@string/exhibitAnswer"
                android:textOff=""
                android:textOn="" />
        </RadioGroup>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Przejdź dalej" />
    </RelativeLayout>

</ScrollView>